--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "api:diff": "./scripts/stable-diff.sh packages/plasma-web/api/* packages/plasma-b2c/api/* > reports/plasma-hope-diff.diff || echo 'diff generated'",
     "api:report": "npm run api:generate-report",
     "auto-plugins:build": "tsc -p auto-plugins/tsconfig.json",
-    "release": "git diff && auto shipit -v",
+    "git:diff": "git diff -- ':!packages/themes/sdds-themes' ':!packages/themes/plasma-themes'",
+    "release": "npm run git:diff && auto shipit -v",
     "cy:clean": "rm -rf cypress/{results,reports,screenshots,videos}",
     "cy:accept-diffs": "docker run -it --rm -v $PWD:/e2e -w /e2e -e CYPRESS_updateSnapshots=true -e CYPRESS_BASE_URL=${PUBLIC_URL:-'http://host.docker.internal:6006'} cypress/included:8.0.0 run --browser chrome",
     "cy:run": "docker run -it --rm -v $PWD:/e2e -w /e2e -e CYPRESS_BASE_URL=${PUBLIC_URL:-'http://host.docker.internal:6006'} cypress/included:8.0.0 run --browser chrome",
