--- a/packages/plasma-icons/package.json
+++ b/packages/plasma-icons/package.json
@@ -11,10 +11,6 @@
   },
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
-  "dependencies": {
-    "@linaria/core": "^6.2.0",
-    "@linaria/react": "^6.2.1"
-  },
   "peerDependencies": {
     "react": ">=16.13.1",
     "react-dom": ">=16.13.1",
@@ -30,6 +26,7 @@
     "@babel/preset-typescript": "7.24.1",
     "@ironkinoko/rollup-plugin-styles": "^4.0.3",
     "@linaria/babel-preset": "^5.0.4",
+    "@linaria/rollup": "^5.0.4",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/pluginutils": "^5.1.2",
@@ -38,7 +35,6 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.0",
-    "@wyw-in-js/rollup": "^0.6.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-annotate-pure-calls": "0.4.0",
     "babel-plugin-styled-components": "^1.13.2",
@@ -92,5 +88,9 @@
   ],
   "sideEffects": [
     "*.css"
-  ]
+  ],
+  "dependencies": {
+    "@linaria/core": "5.0.2",
+    "@linaria/react": "5.0.3"
+  }
 }
