--- a/lerna.json
+++ b/lerna.json
@@ -8,15 +8,17 @@
         "actions/platform-test"
     ],
     "version": "independent",
-    "ignoreChanges": ["*.md", "*.component-test.tsx", "package-lock.json"],
+    "ignoreChanges": ["*.md", "*.component-test.tsx", "package-lock.json", "packages/sdds-clfd-auto/**"],
     "loglevel": "verbose",
     "exact": true,
     "command": {
         "bootstrap": {
-            "npmClientArgs": ["--no-audit", "--no-optional", "--loglevel error", "--no-progress", "--unsafe-perm"]
+            "npmClientArgs": ["--no-audit", "--no-optional", "--loglevel error", "--no-progress", "--unsafe-perm"],
+            "ignore": "@salutejs/sdds-clfd-auto"
         },
         "publish": {
-            "verifyAccess": false
+            "verifyAccess": false,
+            "ignore": "@salutejs/sdds-clfd-auto"
         },
         "list": {
             "ignoreChanges": ["*.md", "package-lock.json"]
