--- a/packages/sdds-clfd-auto/package.json
+++ b/packages/sdds-clfd-auto/package.json
@@ -109,9 +109,10 @@
     "ignoreFiles": [
       "src/**/*.component-test.tsx",
       "src/**/*.stories.tsx",
-      "src/**/*.perftest.tsx"
+      "src/**/*.perftest.tsx",
+      "src/**/*.styles.ts"
     ],
-    "atLeast": 99.93
+    "atLeast": 99.9
   },
   "contributors": [
     "Vasiliy Loginevskiy",
