--- a/packages/plasma-b2c/package.json
+++ b/packages/plasma-b2c/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@salutejs/plasma-b2c",
   "version": "1.576.0",
-  "description": "Salute Design System / React UI kit for business-related web applications",
+  "description": "Salute Design System / React UI kit for business-related web applications.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
   "main": "index.js",
