--- a/packages/plasma-hope/package.json
+++ b/packages/plasma-hope/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-hope",
-  "version": "1.338.0",
+  "version": "1.339.0-dev.0",
   "description": "Salute Design System / Internal React UI kit for web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "@popperjs/core": "2.9.2",
-    "@salutejs/plasma-core": "1.195.0",
+    "@salutejs/plasma-core": "1.196.0-dev.0",
     "@salutejs/plasma-typo": "0.42.0",
     "react-file-drop": "3.1.6",
     "react-popper": "2.3.0",
@@ -57,9 +57,9 @@
     "@babel/preset-typescript": "7.24.1",
     "@microsoft/api-extractor": "7.38.3",
     "@salutejs/plasma-colors": "0.15.0",
-    "@salutejs/plasma-cy-utils": "0.126.0",
-    "@salutejs/plasma-icons": "1.216.0",
-    "@salutejs/plasma-sb-utils": "0.195.0",
+    "@salutejs/plasma-cy-utils": "0.127.0-dev.0",
+    "@salutejs/plasma-icons": "1.217.0-dev.0",
+    "@salutejs/plasma-sb-utils": "0.196.0-dev.0",
     "@salutejs/plasma-tokens-b2b": "1.48.0",
     "@salutejs/plasma-tokens-b2c": "0.59.0",
     "@salutejs/plasma-tokens-web": "1.64.0",
