--- a/packages/sdds-insol/package.json
+++ b/packages/sdds-insol/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-insol",
-  "version": "0.303.0",
+  "version": "0.304.0-dev.0",
   "description": "Salute Design System / React UI kit for SDDS INSOL web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -32,8 +32,8 @@
     "directory": "packages/sdds-insol"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.320.0",
-    "@salutejs/sdds-themes": "0.34.0"
+    "@salutejs/plasma-new-hope": "0.321.0-dev.0",
+    "@salutejs/sdds-themes": "0.35.0-dev.0"
   },
   "peerDependencies": {
     "@emotion/react": ">=11",
@@ -63,10 +63,10 @@
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@salutejs/plasma-colors": "0.15.0",
-    "@salutejs/plasma-core": "1.195.0",
-    "@salutejs/plasma-cy-utils": "0.126.0",
-    "@salutejs/plasma-icons": "1.216.0",
-    "@salutejs/plasma-sb-utils": "0.195.0",
+    "@salutejs/plasma-core": "1.196.0-dev.0",
+    "@salutejs/plasma-cy-utils": "0.127.0-dev.0",
+    "@salutejs/plasma-icons": "1.217.0-dev.0",
+    "@salutejs/plasma-sb-utils": "0.196.0-dev.0",
     "@storybook/addon-docs": "7.6.17",
     "@storybook/addon-essentials": "7.6.17",
     "@storybook/addons": "7.6.17",
