--- a/utils/plasma-cy-utils/package.json
+++ b/utils/plasma-cy-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-cy-utils",
-  "version": "0.126.0",
+  "version": "0.127.0-dev.0",
   "description": "Test helpers shared between ui libraries.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
