--- a/packages/sdds-finportal/package.json
+++ b/packages/sdds-finportal/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-finportal",
-  "version": "0.300.0-dev.0",
+  "version": "0.300.0",
   "description": "Salute Design System / React UI kit for SDDS FinPortal web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -19,8 +19,8 @@
     "directory": "packages/sdds-finportal"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.321.0-dev.0",
-    "@salutejs/sdds-themes": "0.35.0-dev.0"
+    "@salutejs/plasma-new-hope": "0.321.0",
+    "@salutejs/sdds-themes": "0.35.0"
   },
   "peerDependencies": {
     "react": ">=16.13.1",
@@ -37,10 +37,10 @@
     "@babel/preset-typescript": "7.24.1",
     "@microsoft/api-extractor": "7.38.3",
     "@salutejs/plasma-colors": "0.15.0",
-    "@salutejs/plasma-core": "1.196.0-dev.0",
-    "@salutejs/plasma-cy-utils": "0.127.0-dev.0",
-    "@salutejs/plasma-icons": "1.217.0-dev.0",
-    "@salutejs/plasma-sb-utils": "0.196.0-dev.0",
+    "@salutejs/plasma-core": "1.196.0",
+    "@salutejs/plasma-cy-utils": "0.127.0",
+    "@salutejs/plasma-icons": "1.217.0",
+    "@salutejs/plasma-sb-utils": "0.196.0",
     "@storybook/addon-docs": "7.6.17",
     "@storybook/addon-essentials": "7.6.17",
     "@storybook/addons": "7.6.17",
