--- a/scaffold/template-docs/package.json
+++ b/scaffold/template-docs/package.json
@@ -31,8 +31,8 @@
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
     "@salutejs/plasma-docs-ui": "file:../../utils/plasma-docs-ui",
-    "@salutejs/plasma-icons": "1.206.0",
-    "@salutejs/plasma-typo": "0.40.0",
+    "@salutejs/plasma-icons": "1.217.0",
+    "@salutejs/plasma-typo": "0.42.0",
     "@svgr/webpack": "8.1.0",
     "clsx": "^1.1.1",
     "file-loader": "^6.2.0",
@@ -40,7 +40,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "5.3.1",
-    "url-loader": "^4.1.1"
+    "url-loader": "^4.1.1",
+    "react-hook-form": "7.53.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.6.1",
