--- a/packages/plasma-giga/package.json
+++ b/packages/plasma-giga/package.json
@@ -112,7 +112,8 @@
     "ignoreFiles": [
       "src/**/*.component-test.tsx",
       "src/**/*.stories.tsx",
-      "src/**/*.perftest.tsx"
+      "src/**/*.perftest.tsx",
+      "src/**/*.styles.ts"
     ],
     "atLeast": 99.9
   },
