--- a/packages/plasma-asdk/package.json
+++ b/packages/plasma-asdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-asdk",
-  "version": "0.336.0-dev.0",
+  "version": "0.336.0",
   "description": "Salute Design System / React UI kit for Assistant web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -19,7 +19,7 @@
     "directory": "packages/plasma-asdk"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.322.0-dev.0",
+    "@salutejs/plasma-new-hope": "0.322.0",
     "@salutejs/plasma-tokens": "1.111.0",
     "@salutejs/plasma-tokens-b2b": "1.48.0",
     "@salutejs/plasma-typo": "0.42.0"
@@ -42,7 +42,7 @@
     "@salutejs/plasma-core": "1.196.0",
     "@salutejs/plasma-cy-utils": "0.127.0",
     "@salutejs/plasma-icons": "1.217.0",
-    "@salutejs/plasma-sb-utils": "0.197.0-dev.0",
+    "@salutejs/plasma-sb-utils": "0.197.0",
     "@storybook/addon-docs": "7.6.17",
     "@storybook/addon-essentials": "7.6.17",
     "@storybook/addons": "7.6.17",
