--- a/packages/plasma-giga/package.json
+++ b/packages/plasma-giga/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-giga",
-  "version": "0.305.0-dev.0",
+  "version": "0.305.0",
   "description": "Salute Design System / React UI kit for PLASMA GIGA web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,8 +31,8 @@
     "directory": "packages/plasma-giga"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.322.0-dev.0",
-    "@salutejs/plasma-themes": "0.33.0-dev.0"
+    "@salutejs/plasma-new-hope": "0.322.0",
+    "@salutejs/plasma-themes": "0.33.0"
   },
   "peerDependencies": {
     "react": ">=16.13.1",
@@ -60,7 +60,7 @@
     "@salutejs/plasma-core": "1.196.0",
     "@salutejs/plasma-cy-utils": "0.127.0",
     "@salutejs/plasma-icons": "1.217.0",
-    "@salutejs/plasma-sb-utils": "0.197.0-dev.0",
+    "@salutejs/plasma-sb-utils": "0.197.0",
     "@storybook/addon-docs": "7.6.17",
     "@storybook/addon-essentials": "7.6.17",
     "@storybook/addons": "7.6.17",
