--- a/packages/sdds-finportal/package.json
+++ b/packages/sdds-finportal/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-finportal",
-  "version": "0.301.0",
+  "version": "0.302.0-dev.0",
   "description": "Salute Design System / React UI kit for SDDS FinPortal web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -19,7 +19,7 @@
     "directory": "packages/sdds-finportal"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.322.0",
+    "@salutejs/plasma-new-hope": "0.323.0-dev.0",
     "@salutejs/sdds-themes": "0.36.0"
   },
   "peerDependencies": {
