--- a/website/sdds-serv-docs/package.json
+++ b/website/sdds-serv-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-serv-docs",
-  "version": "0.300.0",
+  "version": "0.301.0-dev.0",
   "description": "SDDS SERV documentation",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -30,10 +30,10 @@
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
-    "@salutejs/plasma-docs-ui": "0.491.0",
+    "@salutejs/plasma-docs-ui": "0.492.0-dev.0",
     "@salutejs/plasma-icons": "1.217.0",
     "@salutejs/plasma-typo": "0.42.0",
-    "@salutejs/sdds-serv": "0.309.0",
+    "@salutejs/sdds-serv": "0.310.0-dev.0",
     "@salutejs/sdds-themes": "0.36.0",
     "@svgr/webpack": "8.1.0",
     "clsx": "^1.1.1",
