--- a/packages/plasma-b2c/package.json
+++ b/packages/plasma-b2c/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-b2c",
-  "version": "1.579.0-dev.0",
+  "version": "1.579.0",
   "description": "Salute Design System / React UI kit for business-related web applications.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -44,7 +44,7 @@
   "dependencies": {
     "@salutejs/plasma-core": "1.196.0",
     "@salutejs/plasma-hope": "1.340.0",
-    "@salutejs/plasma-new-hope": "0.323.0-dev.0",
+    "@salutejs/plasma-new-hope": "0.323.0",
     "@salutejs/plasma-themes": "0.33.0",
     "@salutejs/plasma-tokens-b2c": "0.59.0",
     "@salutejs/plasma-tokens-web": "1.64.0",
