--- a/packages/plasma-web/package.json
+++ b/packages/plasma-web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-web",
-  "version": "1.581.0-dev.0",
+  "version": "1.581.0",
   "description": "Salute Design System / React UI kit for web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -21,7 +21,7 @@
   "dependencies": {
     "@salutejs/plasma-core": "1.196.0",
     "@salutejs/plasma-hope": "1.340.0",
-    "@salutejs/plasma-new-hope": "0.323.0-dev.0",
+    "@salutejs/plasma-new-hope": "0.323.0",
     "@salutejs/plasma-themes": "0.33.0",
     "@salutejs/plasma-tokens-b2b": "1.48.0",
     "@salutejs/plasma-tokens-b2c": "0.59.0",
