--- a/packages/sdds-clfd-auto/package.json
+++ b/packages/sdds-clfd-auto/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-clfd-auto",
-  "version": "0.310.0-dev.0",
+  "version": "0.310.0",
   "description": "Salute Design System / React UI kit for SDDS CLFD AUTO web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,7 +31,7 @@
     "directory": "packages/sdds-clfd-auto"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.323.0-dev.0",
+    "@salutejs/plasma-new-hope": "0.323.0",
     "@salutejs/plasma-themes": "0.33.0"
   },
   "peerDependencies": {
