--- a/website/plasma-ui-docs/package.json
+++ b/website/plasma-ui-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-ui-docs",
-  "version": "0.572.0-dev.0",
+  "version": "0.572.0",
   "description": "Plasma Documentation.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -30,7 +30,7 @@
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
-    "@salutejs/plasma-docs-ui": "0.492.0-dev.0",
+    "@salutejs/plasma-docs-ui": "0.492.0",
     "@salutejs/plasma-icons": "1.217.0",
     "@salutejs/plasma-tokens": "1.111.0",
     "@salutejs/plasma-ui": "1.316.0",
