--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "bootstrap:plasma-giga:full": "npx lerna bootstrap --scope='@salutejs/plasma-giga' --scope='@salutejs/{plasma-sb-utils,plasma-tokens,plasma-tokens-utils,core-themes,plasma-typo,plasma-new-hope,plasma-colors,plasma-themes,plasma-core,plasma-docs-ui,plasma-giga-docs}'",
     "bootstrap:plasma-giga:dev": "npx lerna bootstrap --scope='@salutejs/plasma-giga' --scope='@salutejs/{core-themes,plasma-new-hope,plasma-themes,plasma-core,plasma-docs-ui,plasma-giga-docs}'",
     "bootstrap:sdds-insol": "npx lerna bootstrap --scope='@salutejs/sdds-insol' --scope='@salutejs/{plasma-sb-utils,plasma-tokens,plasma-tokens-utils,core-themes,plasma-typo,plasma-new-hope,plasma-colors,sdds-themes,plasma-core,plasma-docs-ui,sdds-insol-docs}'",
-    "bootstrap:sdds-crm:dev": "npx lerna bootstrap --scope='@salutejs/sdds-crm' --scope='@salutejs/{core-themes,plasma-new-hope,sdds-themes,plasma-themes,plasma-core,plasma-docs-ui,sdds-crm-docs}'"
+    "bootstrap:sdds-crm:dev": "npx lerna bootstrap --scope='@salutejs/sdds-crm' --scope='@salutejs/{core-themes,plasma-new-hope,sdds-themes,plasma-themes,plasma-core,plasma-docs-ui,sdds-crm-docs}'",
+    "bootstrap:sdds-netology:dev": "npx lerna bootstrap --scope='@salutejs/sdds-netology' --scope='@salutejs/{core-themes,plasma-new-hope,plasma-themes,plasma-core,plasma-docs-ui,sdds-netology-docs}'"
   },
   "devDependencies": {
     "@actions/core": "1.2.7",
