--- a/packages/plasma-tokens-b2c/package.json
+++ b/packages/plasma-tokens-b2c/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-tokens-b2c",
-  "version": "0.59.0",
+  "version": "0.60.0-dev.0",
   "description": "",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
