--- a/packages/plasma-tokens-web/package.json
+++ b/packages/plasma-tokens-web/package.json
@@ -11,7 +11,7 @@
     "@salutejs/plasma-colors": "0.15.0",
     "@salutejs/plasma-tokens-core": "0.7.0",
     "@salutejs/plasma-tokens-utils": "0.47.0",
-    "@types/node": "16.7.13",
+    "@types/node": "^22.13.13",
     "deepmerge": "4.2.2",
     "jsdom": "17.0.0",
     "jsdom-global": "3.0.2",
