--- a/packages/themes/sdds-themes/package.json
+++ b/packages/themes/sdds-themes/package.json
@@ -32,7 +32,7 @@
   ],
   "devDependencies": {
     "@salutejs/core-themes": "0.20.0",
-    "@types/node": "16.7.13",
+    "@types/node": "^22.13.13",
     "ts-node": "10.2.1"
   },
   "contributors": [
