--- a/utils/plasma-tokens-utils/package.json
+++ b/utils/plasma-tokens-utils/package.json
@@ -34,8 +34,7 @@
     "@types/node": "^14.11.1",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.3",
-    "ts-node": "^9.1.1",
-    "typescript": "4.2.4"
+    "ts-node": "^9.1.1"
   },
   "publishConfig": {
     "access": "public"
